; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lookup(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load i32, i32* %3, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @stackPopUNS(i32 %7)
  %9 = call i32 @SI_SETLEN(i32 %4, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @stackPopPtr(i32 %13)
  %15 = call i32 @SI_SETPTR(i32 %10, i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @ficlParseWord(%struct.TYPE_4__* %19, i32 %20)
  %22 = call i32 @stackPushINT(i32 %18, i32 %21)
  ret void
}

declare dso_local i32 @SI_SETLEN(i32, i32) #1

declare dso_local i32 @stackPopUNS(i32) #1

declare dso_local i32 @SI_SETPTR(i32, i32) #1

declare dso_local i32 @stackPopPtr(i32) #1

declare dso_local i32 @stackPushINT(i32, i32) #1

declare dso_local i32 @ficlParseWord(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
